dsl/src/BooLeXParser.java
// Generated from BooLeX.g4 by ANTLR 4.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BooLeXParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, Circuit=2, Out=3, End=4, And=5, Or=6, Not=7, PostNot=8, Xor=9, 
		NAnd=10, Nor=11, XNor=12, BooleanValue=13, Assign=14, LeftParen=15, RightParen=16, 
		LeftBracket=17, RightBracket=18, Identifier=19, Whitespace=20, Newline=21, 
		LineComment=22;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'circuit'", "'out'", "'end'", "And", "Or", "Not", 
		"'''", "Xor", "'nand'", "'nor'", "'xnor'", "BooleanValue", "'='", "'('", 
		"')'", "'['", "']'", "Identifier", "Whitespace", "Newline", "LineComment"
	};
	public static final int
		RULE_module = 0, RULE_circuitdeclaration = 1, RULE_identifierList = 2, 
		RULE_expressionList = 3, RULE_assignment = 4, RULE_out = 5, RULE_circuitCall = 6, 
		RULE_booleanFactor = 7, RULE_booleanPostNot = 8, RULE_booleanPreNot = 9, 
		RULE_booleanOr = 10, RULE_booleanXor = 11, RULE_booleanExpression = 12;
	public static final String[] ruleNames = {
		"module", "circuitdeclaration", "identifierList", "expressionList", "assignment", 
		"out", "circuitCall", "booleanFactor", "booleanPostNot", "booleanPreNot", 
		"booleanOr", "booleanXor", "booleanExpression"
	};

	@Override
	public String getGrammarFileName() { return "BooLeX.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BooLeXParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(BooLeXParser.EOF, 0); }
		public CircuitdeclarationContext circuitdeclaration(int i) {
			return getRuleContext(CircuitdeclarationContext.class,i);
		}
		public List<CircuitdeclarationContext> circuitdeclaration() {
			return getRuleContexts(CircuitdeclarationContext.class);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitModule(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Circuit) {
				{
				{
				setState(26); circuitdeclaration();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircuitdeclarationContext extends ParserRuleContext {
		public OutContext out() {
			return getRuleContext(OutContext.class,0);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public TerminalNode LeftParen() { return getToken(BooLeXParser.LeftParen, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public TerminalNode End() { return getToken(BooLeXParser.End, 0); }
		public TerminalNode RightParen() { return getToken(BooLeXParser.RightParen, 0); }
		public TerminalNode Circuit() { return getToken(BooLeXParser.Circuit, 0); }
		public TerminalNode Identifier() { return getToken(BooLeXParser.Identifier, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public CircuitdeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circuitdeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterCircuitdeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitCircuitdeclaration(this);
		}
	}

	public final CircuitdeclarationContext circuitdeclaration() throws RecognitionException {
		CircuitdeclarationContext _localctx = new CircuitdeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_circuitdeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); match(Circuit);
			setState(35); match(Identifier);
			setState(36); match(LeftParen);
			setState(38);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(37); identifierList(0);
				}
			}

			setState(40); match(RightParen);
			setState(44);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(41); assignment();
				}
				}
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(47); out();
			setState(48); match(End);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(BooLeXParser.Identifier, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitIdentifierList(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		return identifierList(0);
	}

	private IdentifierListContext identifierList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, _parentState);
		IdentifierListContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_identifierList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(51); match(Identifier);
			}
			_ctx.stop = _input.LT(-1);
			setState(58);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new IdentifierListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_identifierList);
					setState(53);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(54); match(1);
					setState(55); match(Identifier);
					}
					} 
				}
				setState(60);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExpressionListContext extends ParserRuleContext {
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public ExpressionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressionList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterExpressionList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitExpressionList(this);
		}
	}

	public final ExpressionListContext expressionList() throws RecognitionException {
		return expressionList(0);
	}

	private ExpressionListContext expressionList(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionListContext _localctx = new ExpressionListContext(_ctx, _parentState);
		ExpressionListContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_expressionList, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(62); booleanExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(69);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExpressionListContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_expressionList);
					setState(64);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(65); match(1);
					setState(66); booleanExpression();
					}
					} 
				}
				setState(71);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode Assign() { return getToken(BooLeXParser.Assign, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72); identifierList(0);
			setState(73); match(Assign);
			setState(74); booleanExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OutContext extends ParserRuleContext {
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode Out() { return getToken(BooLeXParser.Out, 0); }
		public OutContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_out; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterOut(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitOut(this);
		}
	}

	public final OutContext out() throws RecognitionException {
		OutContext _localctx = new OutContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_out);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(Out);
			setState(77); expressionList(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CircuitCallContext extends ParserRuleContext {
		public TerminalNode LeftParen() { return getToken(BooLeXParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(BooLeXParser.RightParen, 0); }
		public TerminalNode Identifier() { return getToken(BooLeXParser.Identifier, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public CircuitCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_circuitCall; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterCircuitCall(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitCircuitCall(this);
		}
	}

	public final CircuitCallContext circuitCall() throws RecognitionException {
		CircuitCallContext _localctx = new CircuitCallContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_circuitCall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79); match(Identifier);
			setState(80); match(LeftParen);
			setState(82);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(81); identifierList(0);
				}
			}

			setState(84); match(RightParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanFactorContext extends ParserRuleContext {
		public CircuitCallContext circuitCall() {
			return getRuleContext(CircuitCallContext.class,0);
		}
		public TerminalNode BooleanValue() { return getToken(BooLeXParser.BooleanValue, 0); }
		public BooleanExpressionContext booleanExpression() {
			return getRuleContext(BooleanExpressionContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(BooLeXParser.Identifier, 0); }
		public BooleanFactorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanFactor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanFactor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanFactor(this);
		}
	}

	public final BooleanFactorContext booleanFactor() throws RecognitionException {
		BooleanFactorContext _localctx = new BooleanFactorContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_booleanFactor);
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86); circuitCall();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87); match(Identifier);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88); match(BooleanValue);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89); match(LeftParen);
				setState(90); booleanExpression();
				setState(91); match(RightParen);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanPostNotContext extends ParserRuleContext {
		public TerminalNode PostNot() { return getToken(BooLeXParser.PostNot, 0); }
		public BooleanFactorContext booleanFactor() {
			return getRuleContext(BooleanFactorContext.class,0);
		}
		public BooleanPostNotContext booleanPostNot() {
			return getRuleContext(BooleanPostNotContext.class,0);
		}
		public BooleanPostNotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanPostNot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanPostNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanPostNot(this);
		}
	}

	public final BooleanPostNotContext booleanPostNot() throws RecognitionException {
		return booleanPostNot(0);
	}

	private BooleanPostNotContext booleanPostNot(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		BooleanPostNotContext _localctx = new BooleanPostNotContext(_ctx, _parentState);
		BooleanPostNotContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_booleanPostNot, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(96); booleanFactor();
			}
			_ctx.stop = _input.LT(-1);
			setState(102);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new BooleanPostNotContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_booleanPostNot);
					setState(98);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(99); match(PostNot);
					}
					} 
				}
				setState(104);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class BooleanPreNotContext extends ParserRuleContext {
		public BooleanPreNotContext booleanPreNot() {
			return getRuleContext(BooleanPreNotContext.class,0);
		}
		public TerminalNode Not() { return getToken(BooLeXParser.Not, 0); }
		public BooleanPostNotContext booleanPostNot() {
			return getRuleContext(BooleanPostNotContext.class,0);
		}
		public BooleanPreNotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanPreNot; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanPreNot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanPreNot(this);
		}
	}

	public final BooleanPreNotContext booleanPreNot() throws RecognitionException {
		BooleanPreNotContext _localctx = new BooleanPreNotContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_booleanPreNot);
		try {
			setState(108);
			switch (_input.LA(1)) {
			case BooleanValue:
			case LeftParen:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); booleanPostNot(0);
				}
				break;
			case Not:
				enterOuterAlt(_localctx, 2);
				{
				setState(106); match(Not);
				setState(107); booleanPreNot();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanOrContext extends ParserRuleContext {
		public BooleanFactorContext booleanFactor() {
			return getRuleContext(BooleanFactorContext.class,0);
		}
		public BooleanPreNotContext booleanPreNot(int i) {
			return getRuleContext(BooleanPreNotContext.class,i);
		}
		public List<BooleanPreNotContext> booleanPreNot() {
			return getRuleContexts(BooleanPreNotContext.class);
		}
		public TerminalNode Nor() { return getToken(BooLeXParser.Nor, 0); }
		public TerminalNode Or() { return getToken(BooLeXParser.Or, 0); }
		public BooleanOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanOr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanOr(this);
		}
	}

	public final BooleanOrContext booleanOr() throws RecognitionException {
		BooleanOrContext _localctx = new BooleanOrContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_booleanOr);
		try {
			setState(119);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(110); booleanPreNot();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(111); booleanPreNot();
				setState(112); match(Or);
				setState(113); booleanPreNot();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(115); booleanPreNot();
				setState(116); match(Nor);
				setState(117); booleanFactor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanXorContext extends ParserRuleContext {
		public TerminalNode Xor() { return getToken(BooLeXParser.Xor, 0); }
		public List<BooleanOrContext> booleanOr() {
			return getRuleContexts(BooleanOrContext.class);
		}
		public BooleanOrContext booleanOr(int i) {
			return getRuleContext(BooleanOrContext.class,i);
		}
		public TerminalNode XNor() { return getToken(BooLeXParser.XNor, 0); }
		public BooleanXorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanXor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanXor(this);
		}
	}

	public final BooleanXorContext booleanXor() throws RecognitionException {
		BooleanXorContext _localctx = new BooleanXorContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_booleanXor);
		try {
			setState(130);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(121); booleanOr();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122); booleanOr();
				setState(123); match(Xor);
				setState(124); booleanOr();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126); booleanOr();
				setState(127); match(XNor);
				setState(128); booleanOr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanExpressionContext extends ParserRuleContext {
		public TerminalNode And() { return getToken(BooLeXParser.And, 0); }
		public List<BooleanXorContext> booleanXor() {
			return getRuleContexts(BooleanXorContext.class);
		}
		public BooleanXorContext booleanXor(int i) {
			return getRuleContext(BooleanXorContext.class,i);
		}
		public TerminalNode NAnd() { return getToken(BooLeXParser.NAnd, 0); }
		public BooleanExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).enterBooleanExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BooLeXListener ) ((BooLeXListener)listener).exitBooleanExpression(this);
		}
	}

	public final BooleanExpressionContext booleanExpression() throws RecognitionException {
		BooleanExpressionContext _localctx = new BooleanExpressionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_booleanExpression);
		try {
			setState(141);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(132); booleanXor();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(133); booleanXor();
				setState(134); match(And);
				setState(135); booleanXor();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(137); booleanXor();
				setState(138); match(NAnd);
				setState(139); booleanXor();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 2: return identifierList_sempred((IdentifierListContext)_localctx, predIndex);

		case 3: return expressionList_sempred((ExpressionListContext)_localctx, predIndex);

		case 8: return booleanPostNot_sempred((BooleanPostNotContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean expressionList_sempred(ExpressionListContext _localctx, int predIndex) {
		switch (predIndex) {
		case 1: return precpred(_ctx, 1);
		}
		return true;
	}
	private boolean booleanPostNot_sempred(BooleanPostNotContext _localctx, int predIndex) {
		switch (predIndex) {
		case 2: return precpred(_ctx, 1);
		}
		return true;
	}
	private boolean identifierList_sempred(IdentifierListContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}